# wordle_guesses

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
src/wordle_guesses/: __init__.py  wordle_guesses.py
tests/: test_list_guesses.py  test_mashall_guesses.py  test_output_case.py  test_parse_args.py
