[metadata]
name = wordle_guesses
version = 0.1.0
license = MIT
description = Command-line tool to generate lists of candidate Wordle guesses
long_description = file: README.rst
author = Karen Collett
author_email = karen.collett@gmail.com
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment :: Puzzle Games

[options]
packages = find:
package_dir =
    =src
include_package_data = True
# install_requires =
#    <requirement 1>
#    <requirement 2>
#    <...>
#    <requirement n>

[options.packages.find]
where=src
